<resources>
    <string name="app_name">Trello Timer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_delete_data">Delete data</string>
    <string name="action_configure_lists">Configure lists</string>
    <string name="action_debug_times">Short durations (Debug)</string>
    <string name="title_activity_config">Configuration</string>
    <string name="select_board">Select the board than contains your tasks</string>
    <string name="select_lists">Select three lists that contain your tasks:</string>
    <string name="continue_">Continue</string>
    <string name="trello_error">Error conneting to Trello.</string>
    <string name="connection_error">There was a problem connecting with the server. Please make sure your Internet Connection is working properly.</string>
    <string name="finish">Finish</string>
    <string name="todo">TODO</string>
    <string name="doing">DOING</string>
    <string name="done">DONE</string>
    <string name="title_activity_tasks">TasksActivityActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="connect">Connect with Trello</string>
    <string name="connecting">Connecting with Trello...</string>
    <string name="task_moved_to_done">Task moved to DONE</string>
    <string name="Intro">To start using this application, you need to connect to your Trello Account.</string>
    <string-array
        name="task_info_string">
        <item>Use the buttons to move tasks to the DOING list.</item>
        <item>Use the buttons to move tasks to the TODO or DOING list. Tap on a taks to start a Pomodoro with it.</item>
        <item>Use the buttons to move tasks to the DOING list.</item>
    </string-array>
    <string name="title_activity_timer">TimerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="pomodoros">\u0020 pomodoros</string>
    <string name="start_pomodoro">New Pomodoro</string>
    <string name="start_long_break">Long break</string>
    <string name="start_short_break">Short break</string>
    <string name="pause">Pause</string>
    <string name="continue_button">Continue</string>
    <string name="total_spent">\u0020 total spent</string>
    <string name="done_button">Done</string>
    <string name="stop_button">Stop</string>
    <string name="break_text">Taking a break...</string>
    <string name="must_be_doing">To start a pomodoro with a task, first move it to the DOING list.</string>

</resources>
