<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jonatantierno.trellotimer.SelectBoardActivity"
    android:gravity="center">


    <!-- A RecyclerView with some commonly used attributes -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1"
            android:text="@string/select_lists"
            android:id="@+id/boardTextView" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/list_todoView"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_pending"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/list_todoTextView"
                android:text="@string/todo"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:id="@+id/list_todoEditText" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/list_doingView"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_pending"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/list_doingTextView"
                android:text="@string/doing"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:id="@+id/list_doingEditText" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/list_doneView"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/list_doneTextView"
                android:textColor="@color/text_pending"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/done"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:id="@+id/list_doneEditText" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/boardList"
            android:scrollbars="vertical"
            android:layout_weight="100"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:id="@+id/listFinishButton"
            android:layout_gravity="right"
            android:visibility="gone" />


    </LinearLayout>
    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/boardProgressBar"
        android:layout_gravity="center" />

</FrameLayout>
